# clickhouse-client-programs

./: .gitmodules  README.md
cpp/: .clang-tidy  CMakeLists.txt  README.md
cpp/lib/: CMakeLists.txt
cpp/src/: main.cpp
go/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
java/: README.md  clickhouse-client-program-java-read-only.sh  clickhouse-client-program-java-read-write.sh
java/src/main/java/clickhouse-client/: ReadExample.java  ReadWriteExample.java
python/: README.MD  README.md  clickhouse-client-program-python-read-only.sh  clickhouse-client-program-python-read-write.sh  read.py  requirements.txt  write.py
